tests/script_errors/heredoc_interpolation_ident/error.txt
Error: 
    1 | """
    2 | before { `ident unfinished } after
      |          ^^^^^^^^^^^^^^^^^^^^^^^^^ It looks like you forgot to terminate an ident with a closing '`'